Fix navbar item alignment to right of their container (#1)
* align-items end for elements as hamburger is on right of UI

* navbar css not sourced in index

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -26,3 +26,7 @@
     width: 50px; /* Adjust the width as needed */
     height: auto; /* Maintain aspect ratio */
 }
+
+#navbarNav > ul {
+    align-items: end;
+}
